--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Vishal Kumar - Resume</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <h1>This is Demo Web Page.</h1>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  <div class="container mt-5">
+    <div class="text-center mb-4">
+      <h1>Vishal Kumar</h1>
+      <p>Email: <a href="mailto:vks7102@gmail.com">vks7102@gmail.com</a></p>
+      <p>Phone: 8789052773</p>
+    </div>
+
+    <div class="mb-4">
+      <h3>Objective</h3>
+      <p>Passionate about academics and continuous learning.</p>
+    </div>
+
+    <div class="mb-4">
+      <h3>Qualification</h3>
+      <ul>
+        <li>10th</li>
+        <li>12th</li>
+      </ul>
+    </div>
+
+    <div class="mb-4">
+      <h3>Technologies</h3>
+      <p>HTML, CSS, JavaScript</p>
+    </div>
+  </div>
+</body>
 </html>
